# jj-waltz

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: homebrew.md
skills/jj-waltz/: SKILL.md
skills/jj-waltz-support/: SKILL.md
skills/jj-waltz-support/agents/: openai.yaml
skills/jj-waltz-support/evals/: evals.json
skills/jj-waltz/agents/: openai.yaml
src/: cli.rs  lib.rs  links.rs  main.rs  shell.rs  workspace.rs
tests/: cli.rs
